--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
   <head>
-    <meta http-equiv="Refresh" content="7; url=https://www.twitch.tv/tonsofpax" />
+    <meta http-equiv="Refresh" content="7; url=//twitch.tv/tonsofpax" />
   </head>
   <body>
-    <p>Please follow <a href="//www.w3docs.com/">this link</a>.</p>
+    <p>Please follow <a href="//twitch.tv/tonsofpax">this link</a>.</p>
   </body>
 </html>
