--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
     <meta http-equiv="Refresh" content="1; url=//twitch.tv/tonsofpax" />
   </head>
   <body>
-    <p>Please follow <a href="//twitch.tv/tonsofpax">this link</a>.</p>
+    <p>You are being redirected to <a href="//twitch.tv/tonsofpax">my LonelyFans</a>.</p>
   </body>
 </html>
